<resources>
    <string name="app_name">Protectoras Madrid</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="nombre">Nombre</string>
    <string name="contrasena">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="registrarse"><u>Registrarse</u></string>
    <string name="registrar">registrar</string>
    <string name="telefono">Teléfono</string>
    <string name="direccion">Dirección</string>
    <string name="email">Email</string>
    <string name="repetir_contrasena">Repetir contraseña</string>
    <string name="primer_apellido">Primer Apellido</string>
    <string name="segundo_apellido">Segundo apellido</string>
    <string name="registrar_usuario">Registrar Usuario</string>
    <string name="inicio">Inicio</string>
    <string name="subir">Subir</string>
    <string name="tamano">Tamaño</string>
    <string name="genero">Género</string>
    <string name="descripcion">Descripción</string>
    <string name="Especie">Especie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>